--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -14,32 +19,32 @@
     />
   </head>
   <body>
-    <header class="header-menu">
+    <header class="header">
       <div class="container container-menu">
         <nav class="site-nav">
-          <a class="link-prime__nav" href="./index.html"
+          <a class="site-nav__logo" href="./index.html"
             >Web<span class="site-nav__colortext">Studio</span></a
           >
-          <ul class="list-nav">
-            <li class="item-ref__nav">
+          <ul class="site-nav__list">
+            <li class="site-nav__item">
               <a
                 class="site-nav__link site-nav__link--current"
                 href="./index.html"
                 >Студия</a
               >
             </li>
-            <li class="item-ref__nav">
+            <li class="site-nav__item">
               <a class="site-nav__link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="item-ref__nav">
+            <li class="site-nav__item">
               <a class="site-nav__link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="list-data">
-          <li class="item-data__header">
+        <ul class="contacts-header">
+          <li class="contacts-header__item">
             <a
-              class="link-mail__header"
+              class="contacts-header__link"
               aria-label="icon-envelope"
               href="mailto:info@devstudio.com"
             >
@@ -49,9 +54,9 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="item-data__header">
+          <li class="contacts-header__item">
             <a
-              class="link-tel__header"
+              class="contacts-header__link"
               aria-label="icon-smartphone"
               href="tel:+380961111111"
             >
@@ -77,7 +82,7 @@
         <div class="container">
           <!--<h2 class="features-title visually-hidden">Заголовок</h2>-->
           <ul class="features-list">
-            <li class="feature-list__item icon-antenna-1">
+            <li class="features-list__item">
               <div class="features-list__cards">
                 <svg class="features-list__icon" width="70" height="70">
                   <use href="./images/icon.svg#icon-antenna-1"></use>
@@ -130,7 +135,7 @@
       </section>
       <section class="functions">
         <div class="container">
-          <h2 class="functions__title">Чем мы занимаемся</h2>
+          <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="functions-list">
             <li class="functions-list__item">
               <img
@@ -167,7 +172,7 @@
       </section>
       <section class="staff">
         <div class="container">
-          <h2 class="staff__title">Наша команда</h2>
+          <h2 class="section__title">Наша команда</h2>
           <ul class="staff-list">
             <li class="staff-list__item">
               <img
@@ -406,7 +411,7 @@
       </section>
       <section class="regular-guest">
         <div class="container">
-          <h2 class="regular-guest__title">Постоянные клиенты</h2>
+          <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="regular-guest-list">
             <li class="regular-guest-list__item">
               <a class="regular-guest-list__link" aria-label="company" href="">
@@ -455,17 +460,17 @@
       </section>
       <div data-modal class="backdrop is-hidden">
         <div class="modal">
-          <h2 class="modal__title">Оставьте свои данные, мы вам перезвоним</h2>
+          <h1 class="modal__title">Оставьте свои данные, мы вам перезвоним</h1>
           <form class="modal__field">
-            <div class="modal__form">
+            <div class="modal-form">
               <input
                 type="text"
                 class="modal-form__input"
-                name="clients-name"
+                name="client-name"
                 placeholder=" "
-                id="clients-name"
+                id="client-name"
               />
-              <label for="clients-name" class="modal-form__lable">Имя</label>
+              <label for="client-name" class="modal-form__label">Имя</label>
               <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/icon.svg#icon-person-modal"></use>
               </svg>
@@ -474,11 +479,11 @@
               <input
                 type="tel"
                 class="modal-form__input"
-                name="clients-tel"
+                name="client-tel"
                 placeholder=" "
-                id="clients-tel"
+                id="client-tel"
               />
-              <label for="clients-tel" class="modal-form__lable">Телефон</label>
+              <label for="client-tel" class="modal-form__label">Телефон</label>
               <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/icon.svg#icon-phone-modal"></use>
               </svg>
@@ -487,11 +492,11 @@
               <input
                 type="email"
                 class="modal-form__input"
-                name="clients-mail"
+                name="client-mail"
                 placeholder=" "
-                id="clients-mail"
+                id="client-mail"
               />
-              <label for="clients-mail" class="modal-form__lable">Почта</label>
+              <label for="client-mail" class="modal-form__label">Почта</label>
               <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/icon.svg#icon-email-modal"></use>
               </svg>
@@ -504,7 +509,7 @@
                 placeholder="Введите текст"
                 id="comments"
               ></textarea>
-              <label for="comments" class="modal-comments__lable"
+              <label for="comments" class="modal-comments__label"
                 >Комментарий</label
               >
             </div>
@@ -543,20 +548,22 @@
     </main>
     <footer class="footer">
       <div class="container container-adr">
-        <div class="footer-adr__link-prime">
-          <a class="link-prime-footer__adr" href="./index.html"
-            ><span class="colortext-footer__adr">Web</span>Studio</a
+        <div class="footer-adr">
+          <a class="footer-adr__logo" href="./index.html"
+            ><span class="footer-adr__colortext">Web</span>Studio</a
           >
           <address class="address">
             <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="list-contacts">
-              <li class="item-contacts__footer">
-                <a class="mail__footer" href="mailto:info@devstudio.com"
+            <ul class="contacts-footer">
+              <li class="contacts-footer__item">
+                <a
+                  class="contacts-footer__link"
+                  href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="item-contacts__footer">
-                <a class="tel__footer" href="tel:+380961111111"
+              <li class="contacts-footer__item">
+                <a class="contacts-footer__link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -564,32 +571,32 @@
           </address>
         </div>
         <div class="subscription">
-          <p class="sub-title__text">Присоединяйтесь</p>
+          <p class="sub__title">Присоединяйтесь</p>
           <ul class="sub__list">
-            <li class="sub-item">
+            <li class="sub__item">
               <a class="sub__link" aria-label="instagram" href="">
-                <svg class="sub-icon" width="20" height="20">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="sub-item">
-              <a class="sub-link" aria-label="twitter" href="">
-                <svg class="sub-icon" width="20" height="20">
+            <li class="sub__item">
+              <a class="sub__link" aria-label="twitter" href="">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter-1-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="sub-item">
-              <a class="sub-link" aria-label="facebook" href="">
-                <svg class="sub-icon" width="20" height="20">
+            <li class="sub__item">
+              <a class="sub__link" aria-label="facebook" href="">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook-1-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="sub-item">
-              <a class="sub-link" aria-label="linkedin" href="">
-                <svg class="sub-icon" width="20" height="20">
+            <li class="sub__item">
+              <a class="sub__link" aria-label="linkedin" href="">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin-1-1"></use>
                 </svg>
               </a>
