--- a/portfolio.html
+++ b/portfolio.html
@@ -9,37 +9,42 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
      <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-      <header class="header-menu">
+       <header class="header">
       <div class="container container-menu">
         <nav class="site-nav">
-          <a class="link-prime__nav" href="./index.html"
+          <a class="site-nav__logo" href="./index.html"
             >Web<span class="site-nav__colortext">Studio</span></a
           >
-          <ul class="list-nav">
-            <li class="item-ref__nav">
+          <ul class="site-nav__list">
+            <li class="site-nav__item">
               <a
                 class="site-nav__link"
                 href="./index.html"
                 >Студия</a
               >
             </li>
-            <li class="item-ref__nav">
+            <li class="site-nav__item">
               <a class="site-nav__link site-nav__link--current" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="item-ref__nav">
+            <li class="site-nav__item">
               <a class="site-nav__link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="list-data">
-          <li class="item-data__header">
+        <ul class="contacts-header">
+          <li class="contacts-header__item">
             <a
-              class="link-mail__header"
+              class="contacts-header__link"
               aria-label="icon-envelope"
               href="mailto:info@devstudio.com"
             >
@@ -49,9 +54,9 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="item-data__header">
+          <li class="contacts-header__item">
             <a
-              class="link-tel__header"
+              class="contacts-header__link"
               aria-label="icon-smartphone"
               href="tel:+380961111111"
             >
@@ -309,20 +314,22 @@
     </main>
      <footer class="footer">
       <div class="container container-adr">
-        <div class="footer-adr__link-prime">
-          <a class="link-prime-footer__adr" href="./index.html"
-            ><span class="colortext-footer__adr">Web</span>Studio</a
+        <div class="footer-adr">
+          <a class="footer-adr__logo" href="./index.html"
+            ><span class="footer-adr__colortext">Web</span>Studio</a
           >
           <address class="address">
             <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="list-contacts">
-              <li class="item-contacts__footer">
-                <a class="mail__footer" href="mailto:info@devstudio.com"
+            <ul class="contacts-footer">
+              <li class="contacts-footer__item">
+                <a
+                  class="contacts-footer__link"
+                  href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="item-contacts__footer">
-                <a class="tel__footer" href="tel:+380961111111"
+              <li class="contacts-footer__item">
+                <a class="contacts-footer__link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -330,32 +337,32 @@
           </address>
         </div>
         <div class="subscription">
-          <p class="sub-title__text">Присоединяйтесь</p>
+          <p class="sub__title">Присоединяйтесь</p>
           <ul class="sub__list">
-            <li class="sub-item">
+            <li class="sub__item">
               <a class="sub__link" aria-label="instagram" href="">
-                <svg class="sub-icon" width="20" height="20">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="sub-item">
-              <a class="sub-link" aria-label="twitter" href="">
-                <svg class="sub-icon" width="20" height="20">
+            <li class="sub__item">
+              <a class="sub__link" aria-label="twitter" href="">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter-1-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="sub-item">
-              <a class="sub-link" aria-label="facebook" href="">
-                <svg class="sub-icon" width="20" height="20">
+            <li class="sub__item">
+              <a class="sub__link" aria-label="facebook" href="">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook-1-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="sub-item">
-              <a class="sub-link" aria-label="linkedin" href="">
-                <svg class="sub-icon" width="20" height="20">
+            <li class="sub__item">
+              <a class="sub__link" aria-label="linkedin" href="">
+                <svg class="sub__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin-1-1"></use>
                 </svg>
               </a>
